// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build successfully writes a folder tree with a '.github' folder 1`] = `
Array [
  "CODEOWNERS",
  "ISSUE_TEMPLATE.md",
  "workflows",
]
`;

exports[`Build successfully writes a folder tree with a '.gitignore' 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'demos' folder 1`] = `
Array [
  "src",
]
`;

exports[`Build successfully writes a folder tree with a 'demos/src' folder 1`] = `
Array [
  "demo.js",
  "demo.mustache",
  "demo.scss",
  "pa11y.mustache",
]
`;

exports[`Build successfully writes a folder tree with a 'demos/src/demo.js' file 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'demos/src/demo.mustache' file 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'demos/src/demo.scss' file 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'demos/src/pa11y.mustache' file 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'package.json' 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'src/' folder 1`] = `
Array [
  "js",
  "scss",
]
`;

exports[`Build successfully writes a folder tree with a 'src/js' folder 1`] = `
Array [
  "test-name.js",
]
`;

exports[`Build successfully writes a folder tree with a 'src/js/component-name' file 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'src/scss' folder 1`] = `
Array [
  "_brand.scss",
  "_variables.scss",
]
`;

exports[`Build successfully writes a folder tree with a 'src/scss/_brand.scss' file 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'src/scss/_variables.scss' file 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'test' folder 1`] = `
Array [
  "js",
  "scss",
]
`;

exports[`Build successfully writes a folder tree with a 'test/js' folder 1`] = `
Array [
  "helpers",
  "test-name.test.js",
]
`;

exports[`Build successfully writes a folder tree with a 'test/js/component-name' file 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'test/js/helpers' folder 1`] = `
Array [
  "fixtures.js",
]
`;

exports[`Build successfully writes a folder tree with a 'test/js/helpers/fixtures' file 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'test/scss' folder 1`] = `
Array [
  "_main.test.scss",
  "index.test.scss",
]
`;

exports[`Build successfully writes a folder tree with a 'test/scss/index' file 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a 'test/scss/main' file 1`] = `undefined`;

exports[`Build successfully writes a folder tree with a root folder 1`] = `
Array [
  ".dependabot",
  ".eslintignore",
  ".eslintrc.cjs",
  ".github",
  ".gitignore",
  ".npmignore",
  ".remarkrc.cjs",
  ".stylelintignore",
  ".stylelintrc.cjs",
  "README.md",
  "demos",
  "main.js",
  "main.scss",
  "origami.json",
  "package.json",
  "src",
  "test",
]
`;

exports[`Build successfully writes a folder tree with an 'README.md' 1`] = `undefined`;

exports[`Build successfully writes a folder tree with an 'origami.json' 1`] = `undefined`;
